--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
+###local file###
+mmbot_local.py
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
